--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Roboto', sans-serif;
+}
 header {
     top: 0;
     left: 0;
@@ -23,7 +26,7 @@ main {
 .left {
     height: 785px;
     width: 50%;
-    background-color: #E5E5E5;
+    background-color: #FCFCFC;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,14 +43,79 @@ main {
 
 }
 
-.modelos {
+.compras {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
 .imageBackground {
     background-color: #F2F2F2;
     border: 0.5px solid #C4C4C4;
     box-sizing: border-box;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;        
+
+}
+.estilos{
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 30px 30px 0px;
+}
+input{
+    width: 400px;
+    height: 40px;
+    background-color: #F2F2F2;
+    border: none;
+    border-radius: 10px;
+    padding-left: 12px;
+}
+button{
+    width: 400px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #C4C4C4;
+    color: #FCFCFC;
+    border: none;
+}
+footer{
+    height: 342px;
+    width: 100%;
+    background-color: #F2F2F2;
+    padding-top: 30px;
+    margin-right: 30px;
+}
+h2{
+    font-size: 24px;
+    margin-left: 120px;
+    margin-bottom: 30px;
+}
+.ultimos-pedidos{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 110px;
+    margin-right: 20px;
+}
+.background-pedido{
+    width: 170px;
+    height: 220px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+}
+span{
+    font-weight: bold;
+}
+footer img{
+    width: 180px;
+    height: 180px;
 }
