--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
 }
+
 header {
     top: 0;
     left: 0;
@@ -48,6 +49,7 @@ main {
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 .imageBackground {
     background-color: #F2F2F2;
     border: 0.5px solid #C4C4C4;
@@ -57,17 +59,30 @@ main {
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;        
+    justify-content: center;
 
 }
-.estilos{
+
+.estilos {
     width: 400px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 20px 30px 30px 0px;
 }
-input{
+
+.card-de-escolha {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.estilos p {
+    margin: 10px;
+}
+
+input {
     width: 400px;
     height: 40px;
     background-color: #F2F2F2;
@@ -75,34 +90,44 @@ input{
     border-radius: 10px;
     padding-left: 12px;
 }
-button{
-    width: 400px;
+
+.imagem-url p {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+button {
+    width: 414px;
     height: 40px;
     border-radius: 10px;
     background-color: #C4C4C4;
     color: #FCFCFC;
     border: none;
 }
-footer{
+
+footer {
     height: 342px;
     width: 100%;
     background-color: #F2F2F2;
     padding-top: 30px;
     margin-right: 30px;
 }
-h2{
+
+h2 {
     font-size: 24px;
     margin-left: 120px;
     margin-bottom: 30px;
 }
-.ultimos-pedidos{
+
+.ultimos-pedidos {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-left: 110px;
-    margin-right: 20px;
+    margin-right: 110px;
 }
-.background-pedido{
+
+.background-pedido {
     width: 170px;
     height: 220px;
     background-color: #FFFFFF;
@@ -112,10 +137,12 @@ h2{
     justify-content: center;
 
 }
-span{
+
+span {
     font-weight: bold;
 }
-footer img{
+
+footer img {
     width: 180px;
     height: 180px;
 }
